fix layout is clipped

--- a/src/Components/App/style.scss
+++ b/src/Components/App/style.scss
@@ -1,10 +1,16 @@
+@import "../../styles/abstracts/mixins";
+
 .exposure-interface.app {
   padding: 2rem;
   display: flex;
   align-items: start;
   justify-content: center;
 
-  & > *:not(:last-child) {
-    margin-right: 2rem;
-  }
+  //@include respond(phone) {
+  //  flex-direction: column;
+  //}
+
+  //& > *:not(:last-child) {
+  //  margin-right: 2rem;
+  //}
 }
