--- a/src/Components/ui/Input/style.scss
+++ b/src/Components/ui/Input/style.scss
@@ -5,6 +5,7 @@
   background: transparent;
   border: none;
   color: $color-text-default;
+  max-width: 100%;
   &:focus {
     outline: none;
   }
